Bugfix: vertical scrollbar on tabs

--- a/scss/_flist_overrides.scss
+++ b/scss/_flist_overrides.scss
@@ -13,6 +13,7 @@ hr {
 
 .nav-tabs-scroll {
   overflow-x: auto;
+  overflow-y: hidden;
 
   .nav-tabs {
     flex-wrap: nowrap;
